# channel-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yaml
include/lesomnus/: channel.hpp
include/lesomnus/channel/: bounded_channel.hpp  chan.hpp  channel.hpp  error.hpp  select.hpp  unbounded_channel.hpp
include/lesomnus/channel/detail/: task.hpp
tests/: CMakeLists.txt
tests/include/testing/: constants.hpp
tests/include/testing/suite/: channel.hpp
tests/src/: bounded_channel.cpp  channel.cpp  io_bench.cpp  select.cpp  unbounded_channel.cpp
